kubernetes/apps/default/line/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: line
  annotations:
    external-dns.alpha.kubernetes.io/hostname: line.goyangi.io
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - line.goyangi.io
  rules:
    - backendRefs:
        - name: line-api
          port: 8080
